k8s/client-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-service
  template:
    metadata:
      labels:
        app: client-service
    spec:
      containers:
      - name: client-service
        image: ghcr.io/mariusss11/client-service:latest
        ports:
        - containerPort: 8010
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: client-service
  ports:
  - protocol: TCP
    port: 8010
    targetPort: 8010
  type: ClusterIP
