k8s/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80  # assuming your frontend container runs on 3000
  type: LoadBalancer  # or ClusterIP depending on your needs

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/mariusss11/frontend:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        # - name: github-registry-secret  # Secret to authenticate with GitHub Packages (create this beforehand)
