k8s/item-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: item-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: item-service
  template:
    metadata:
      labels:
        app: item-service
    spec:
      containers:
        - name: item-service
          image: ghcr.io/mariusss11/item-service:latest
          ports:
            - containerPort: 8020
---
apiVersion: v1
kind: Service
metadata:
  name: item-service
spec:
  selector:
    app: item-service
  ports:
    - protocol: TCP
      port: 8020
      targetPort: 8020
