k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://a312ebdfe078b4941b8ca485894409f4-891584174.eu-central-1.elb.amazonaws.com"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: identity-service
                port:
                  number: 8010
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: identity-service
                port:
                  number: 8010
          - path: /api/admin
            pathType: Prefix
            backend:
              service:
                name: identity-service
                port:
                  number: 8010
          - path: /api/home
            pathType: Prefix
            backend:
              service:
                name: identity-service
                port:
                  number: 8010
          - path: /api/maps
            pathType: Prefix
            backend:
              service:
                name: map-service
                port:
                  number: 8020
          - path: /api/borrows
            pathType: Prefix
            backend:
              service:
                name: borrow-service
                port:
                  number: 8030
